--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -20,13 +20,13 @@
   }
 
   .section-pic-container {
-      width: 275px;
-      height: 275px;    
+      width: 200px;
+      height: 200px;    
       margin: 0 auto 2rem;    
   }
 
   #about .section-pic-container {       
-    width: 275px;
+    width: 180px;
     height: auto;
   } 
   .about-containers {
@@ -62,11 +62,26 @@
   }
 
   .title {
-    font-size: 40px;
+    font-size: 32px;
+  }
+
+  .section_text_p2 {
+    font-size: 20px;    
   }
 
   .text-container {
     width: 320px; 
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  .btn {
+    border: 1px solid black; 
+    width: 140px;
+    height: 50px;
+    font-size: 14px;
   }
 
   #about {
