--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -61,6 +61,10 @@
     font-size: 17px;
   }
 
+  #profile, #about {
+    height: 600px;
+  }
+
   .title {
     font-size: 32px;
   }
@@ -99,6 +103,11 @@
   #expertise  {
     margin-bottom: 800px; 
   } 
+
+  #expertise .article-container {    
+    justify-content: center;
+  }
+
 
   #projects  {
     margin-bottom: 1000px; 
